# Payment-Processor

./: .Cargo.toml.swp  .eslint.json  .gitignore  .index.html.swp  .sample.env  Cargo.toml  Dockerfile  Gruntfile.js  README.md  bower.json  build.rs  hellosign_script.sh  hellosign_setup.text  index.html  package.json  webserver.yaml
client/: .jshintrc  index.html
client/app/: app.constant.js  app.js  app.scss
client/app/dashboard/: dashboard.controller.js  dashboard.html  dashboard.scss
client/app/login/: login.controller.js  login.html  login.scss
client/assets/css/: styles.css
migrations/20160707162425_create_credits_table/: down.sql  up.sql
migrations/20160707162425_create_transactions_table/: up.sql
migrations/20160710173023_StubData/: down.sql  up.sql
migrations/20160719100836_AddUsersTable/: up.sql
migrations/20160719101159_AddDefaultUser/: down.sql  up.sql
migrations/20160811112522_AddLineItemTable/: up.sql
migrations/20160822135733_AddStripeInfoTable/: down.sql  up.sql
server/: app.js  routes.js
server/api/user/: index.js  (+2 more)
server/config/: express.js  local.env.sample.js  seed.js  socketio.js
src/: .main.rs.swp  database.rs  error.rs  main.rs  main.rs.in  schema.rs  uri_params.rs
src/handlers/: mod.rs
src/models/: credit.rs  line_item.rs  mod.rs  stripe_info.rs  transaction.rs  user.rs  users.rs
src/services/: authentication.rs  bcrypt.rs  catch_unauthenticated_request.rs  datetime_conversion.rs  ensure_authenticated.rs  jwt.rs  mod.rs  numeric_conversion.rs  param_parser.rs
src/util/: auth.rs  auth_token.rs  error.rs  mod.rs  orm.rs
tasks/: optionsBuilder.js  rust.js
(+102 files in other folders)
