[package]
name = "payment_processor"
version = "0.1.0"
authors = ["Gabe Harms <gabeharms@gmail.com>"]

[dependencies]
staticfile = "0.2.0"
mount = "*"
chrono = { version = "0.2.22", features = ["rustc-serialize"] }
diesel = { version = "0.6.2", features = ["chrono", "postgres"], default-features = false }
diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
iron = "0.3.0"
router = "0.1.1"
rustc-serialize = "0.3.19"
urlencoded = "0.3.0"

