[package]
name = "payment_processor"
version = "0.1.0"
authors = ["Gabe Harms <gabeharms@gmail.com>"]
build = "build.rs"

[build-dependencies]
syntex = { version = "0.31.0", optional = true }
diesel_codegen = { version = "0.6.1", default-features = false, features = ["postgres"] }
dotenv_codegen = { version = "0.8.1",  optional = true }

[dependencies]
syntex = { version = "0.31.0", optional = true }
staticfile = "0.2.0"
mount = "*"
chrono = { version = "0.2.22", features = ["rustc-serialize"] }
diesel = "0.6.1"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["postgres"] }
dotenv = "0.8.0"
dotenv_macros = { version = "0.8.0", optional = true }
iron = "0.3.0"
router = "0.1.1"
rustc-serialize = "0.3.19"
urlencoded = "0.3.0"
bodyparser = "*"
persistent = "*"

[features]
default = ["nightly"]
with-syntex = ["syntex", "diesel_codegen/with-syntex", "dotenv_codegen"]
nightly = ["diesel/unstable", "diesel_codegen/nightly", "dotenv_macros"]
